<resources>
    <string name="app_name">ShopItOut</string>
    <string name="login">LOG IN</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="log_in">LOG IN</string>
    <string name="dont_have_acc">Dont have account?Sign up here</string>
    <string name="reg">REGISTRATION</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_acc">Already have account?Sign in here</string>
    <string name="total_amount">TOTAL AMOUNT</string>
    <string name="amount">00000</string>
    <string name="addshoppinglist">ADD SHOPPING LIST</string>
    <string name="type">TYPE:</string>
    <string name="item_amount">AMOUNT:</string>
    <string name="note">NOTE:</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="update_data">UPDATE SHOPPING LIST</string>


</resources>
