<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_design"
    android:gravity="center"
    tools:context=".activity_registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/reg"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:textColorHint="@android:color/white"
                android:id="@+id/email_reg"
                android:textColor="@android:color/white"
                android:background="@drawable/ed_design"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:textColorHint="@android:color/white"
                android:id="@+id/reg_password"
                android:textColor="@android:color/white"
                android:background="@drawable/ed_design"
                android:inputType="textPassword"
                android:padding="10dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sign_up"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:id="@+id/btn_sign_up"
                android:background="@drawable/ed_design"
                android:backgroundTint="@color/colorPrimary"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_margin="10dp"
                android:text="@string/already_have_acc"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:id="@+id/sign_in"

                />
        </LinearLayout>
    </ScrollView>


</LinearLayout>