<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    app:cardElevation="6dp"
    android:elevation="6dp"
    tools:context=".HomeActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="16,sep,2019"
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/date"
                android:padding="5dp"
                android:textColor="@color/colorPrimaryDark"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textAppearance="?android:textAppearanceLarge"
                android:id="@+id/type"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:maxLines="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_below="@+id/type"
                android:padding="5dp"
                android:textColor="#FF40"
                android:maxLines="1"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_amount"
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/amount_item"
                android:padding="5dp"
                android:textColor="#FF0a"/>
        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>